testing push to both website and github

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
     <head>
-
+        <style>
+            header {
+                background-color: #154c79;
+            }
+            footer {
+                background-color: DarkSalmon;
+            }
+        </style>
     </head>
     <body>
+        <header>Header</header>
         <h1>James Moles</h1>
+        <footer>Footer</footer>
     </body>
 </html>
