--- a/index.html
+++ b/index.html
@@ -1,17 +1,49 @@
 <html>
     <head>
         <style>
+            body {
+                margin: 0px;
+            }
             header {
                 background-color: #154c79;
             }
             footer {
                 background-color: DarkSalmon;
             }
+            p {
+                background-color: lightgray;
+                color: darkgreen;
+            }
+            header {
+                padding: 30px;
+            }
+            .navbar {
+                overflow: hidden;
+                background-color: #1e81b0;
+            }
+            .navbar a {
+                float: left;
+                display: block;
+                color: #fff;
+                text-align: center;
+                padding: 20px 24px;
+                text-decoration: none;
+            }
+            .navbar a:hover {
+                background-color: #76b5c5;
+            }
         </style>
     </head>
     <body>
-        <header>Header</header>
-        <h1>James Moles</h1>
+        <header><h1>Header</h1></header>
+        <div class="navbar">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Projects</a>
+            <a href="">Contact Me</a>
+        </div>
+        <h2>James Moles</h2>
+        <p>Hi, I will be updating this website with my personal projects and ideas. To contact me feel free to email me.</p>
         <footer>Footer</footer>
     </body>
 </html>
