--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Home | James Moles</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+
         <style>
             body {
                 margin: 0px;
