--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
     <head>
         <title>Home | James Moles</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+        
+        <!-- IE -->
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+        <!-- Other Browsers -->
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
         <style>
             body {
