--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <!-- Other Browsers -->
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="icon" type="image/png" href="favicon-16x16.png" />
 
         <style>
             body {
