--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="icon" type="image/png" href="favicon-16x16.png" />
 
+        <link rel="icon" type="image/x-icon" href="https://www.jamesmoles.com/favicon.ico" />
+
         <style>
             body {
                 margin: 0px;
