fixed favicon issue

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Home | James Moles</title>
@@ -9,9 +10,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="icon" type="image/png" href="favicon-16x16.png" />
 
-        <!-- 
         <link rel="icon" type="image/x-icon" href="https://www.jamesmoles.com/favicon.ico" />
-        -->
 
         <style>
             body {
