--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html land="en-US">
     <head>
         <title>Home | James Moles</title>
         
@@ -7,8 +7,8 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         -->
 
-        <!-- Other Browsers -->
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <!-- Most Browsers -->
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" href="favicon-16x16.png" />
 
         <link rel="icon" type="image/x-icon" href="https://www.jamesmoles.com/favicon.ico" />
