realized mistake with link tags formatting

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en-US">
     <head>
         <title>Home | James Moles</title>
+        <meta charset="UTF-8">
         
         <!-- IE
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         -->
 
         <!-- Most Browsers -->
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="icon" type="image/png" href="favicon-16x16.png" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/png" href="favicon-16x16.png">
 
-        <link rel="icon" type="image/x-icon" href="https://www.jamesmoles.com/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://www.jamesmoles.com/favicon.ico">
 
         <style>
             body {
