--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         -->
 
-        <!-- Most Browsers -->
+        <!-- Most Browsers
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        -->
 
-        <!-- 
+         
         <link rel="icon" type="image/png" href="favicon-16x16.png">
+        <!--
         <link rel="icon" type="image/x-icon" href="https://www.jamesmoles.com/favicon.ico">
         -->
 
