--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         
         <!-- Works for Chrome, Firefox, and IE -->
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=1.1">
+        <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1.1">
 
         <style>
             body {
