messing with react tutorial

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         
         <!-- Works for Chrome, Firefox, and IE -->
-        <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.2">
+        <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1">
 
         <style>
             body {
@@ -45,7 +45,7 @@
         <header><h1>Header</h1></header>
         <div class="navbar">
             <a href="">Home</a>
-            <a href="">About</a>
+            <a href="/my-app/public/index.html">About</a>
             <a href="">Projects</a>
             <a href="">Contact Me</a>
         </div>
