--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <header><h1>Header</h1></header>
         <div class="navbar">
             <a href="">Home</a>
-            <a href="/my-app/public/index.html">About</a>
+            <a href="/my-app/build/index.html">About</a>
             <a href="">Projects</a>
             <a href="">Contact Me</a>
         </div>
