added additional pages to website, link to github, study page, and moved tic-tac-toe to study page

--- a/study.html
+++ b/study.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Home | James Moles</title>
+        <title>Study | James Moles</title>
         <meta charset="UTF-8">
         
         <!-- Works for Chrome, Firefox, and IE -->
@@ -29,8 +29,8 @@
                 </a>
             </div>
         </div>
-        <h2>Test</h2>
-        <p>Hi, I will be updating this website with my personal projects and ideas. To contact me feel free to email me.</p>
-        <footer>Footer</footer>
+        <p>
+            <a href="my-app/build/index.html">React Tic-Tac-Toe</a>
+        </p>
     </body>
 </html>
