added bootstrap css for icons, added content to each html page

--- a/study.html
+++ b/study.html
@@ -29,6 +29,7 @@
                 </a>
             </div>
         </div>
+        <h2>Study</h2>
         <p>
             <a href="my-app/build/index.html">React Tic-Tac-Toe</a>
         </p>
