--- a/study.html
+++ b/study.html
@@ -32,6 +32,7 @@
         <h2>Study</h2>
         <p>
             <a href="my-app/build/index.html">React Tic-Tac-Toe</a>
+            <a href="helloworld/build/index.html">React Components Step-by-Step</a>
         </p>
     </body>
 </html>
