adjust html pages to use same css from bootstrap

--- a/study.html
+++ b/study.html
@@ -7,6 +7,7 @@
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1">
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="navstyles.css">
 
     </head>
@@ -31,8 +32,11 @@
         </div>
         <h2>Study</h2>
         <p>
-            <a href="my-app/build/index.html">React Tic-Tac-Toe</a>
-            <a href="helloworld/build/index.html">React Components Step-by-Step</a>
+            <ul style="list-style-type: none;">
+                <li><a href="my-app/build/index.html">React Tic-Tac-Toe</a></li>
+                <li><a href="helloworld/build/index.html">React Components Step-by-Step</a></li>
+            </ul>
         </p>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
