extracting components into subcomponents, practicing basic css

--- a/helloworld/public/index.html
+++ b/helloworld/public/index.html
@@ -32,6 +32,8 @@
     <div id="root"></div>
     <div id="hello-world"></div>
     <div id="test"></div>
+    <div id="welcomeboard"></div>
+
     
     <!--
       This HTML file is a template.
