--- a/helloworld/public/index.html
+++ b/helloworld/public/index.html
@@ -33,6 +33,8 @@
     <div id="hello-world"></div>
     <div id="test"></div>
     <div id="welcomeboard"></div>
+    <div id="clock"></div>
+    <div id="clock-component"></div>
 
     
     <!--
