added table for starting info list

--- a/helloworld/public/index.html
+++ b/helloworld/public/index.html
@@ -36,6 +36,34 @@
     <div id="clock"></div>
     <div id="clock-component"></div>
 
+
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Color</th>
+        <th>Fish</th>
+      </tr>
+      <tr>
+        <td>Josh</td>
+        <td>Blue</td>
+        <td>Tilapia</td>
+      </tr>
+      <td>
+        <tr>
+        <td>Bob</td>
+        <td>Red</td>
+        <td>Catfish</td>
+      </tr>
+      <td>
+      <tr>
+        <td>Alice</td>
+        <td>Green</td>
+        <td>Flounder</td>
+      </tr>
+      <td>
+      </td>
+    </table>
+
     
     <!--
       This HTML file is a template.
