--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
                 
             </div>
         </div>
-        <h2>Home</h2>
-        <p>Hi, I will be updating this website with my personal projects and ideas. To contact me feel free to email me.</p>
-        <footer>Footer</footer>
+        <main>
+            <div class="main-content">
+                <h2>Home</h2>
+                <p>Hi, I will be updating this website with my personal projects and ideas. To contact me feel free to email me.</p>
+            </div>
+            <footer>Footer</footer>
+        </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
