--- a/about.html
+++ b/about.html
@@ -34,10 +34,16 @@
 
             </div>
         </div>
-        <h2>About</h2>
-        <p>
-            Hello
-        </p>
+
+        <main>
+            <div class="main-content">
+                <h2>About</h2>
+                <p>
+                    Hello
+                </p>
+            </div>
+        </main>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
