listing some interests

--- a/study.html
+++ b/study.html
@@ -47,12 +47,19 @@
         <div class="main-content">
 
             <h2>Study</h2>
-            <p>
             <ul style="list-style-type: none;">
                 <li><a href="my-app/build/index.html">React Tic-Tac-Toe</a></li>
                 <li><a href="helloworld/build/index.html">React Components Step-by-Step</a></li>
             </ul>
-            </p>
+            <h2>Current Interests:</h2>
+            <p>These are in no particular order.</p>
+            <ul>
+                <li>Operating Systems (Mostly Unix/Linux)</li>
+                <li>Network Systems</li>
+                <li>Webserver Security</li>
+                <li>Game Engine Technologies</li>
+                <li>Data Analytics</li>
+            </ul>
         </div>
     </main>
 
