change color on hover submit button

--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,11 @@
                                 required
                             />
 
-                            <input class="w-48 bg-green-300 rounded-lg" type="submit" value="Send Email" />
+                            <input
+                                class="w-48 bg-green-300 rounded-lg hover:bg-green-500"
+                                type="submit"
+                                value="Send Email"
+                            />
                         </form>
                     </div>
                 </div>
