fixed phone scroll, adjusted content size

--- a/about.html
+++ b/about.html
@@ -17,10 +17,8 @@
         <link href="/tailwind.css" rel="stylesheet" />
     </head>
 
-    <body class="bg-gradient-to-r from-green-50 to-green-100 overflow-hidden">
-        <div
-            class="max-w-3xl mx-auto overflow-hidden flex flex-col items-center bg-white my-5 rounded-xl shadow-md p-8"
-        >
+    <body class="bg-gradient-to-r from-green-50 to-green-100 overflow-x-hidden">
+        <div class="w-screen lg:max-w-4xl mx-auto flex flex-col items-center bg-white my-5 lg:rounded-xl shadow-md p-8">
             <header class="flex w-full justify-center">
                 <h1 class="text-green-600 text-4xl antialiased">James Moles</h1>
             </header>
