--- a/projects.html
+++ b/projects.html
@@ -25,14 +25,14 @@
                 <h1 class="text-green-600 text-4xl font-semibold antialiased">James Moles</h1>
             </header>
             <div class="mb-7 text-2xl">
-                <a href="https://github.com/jpmoles" target="_blank" rel="noreferrer noopener"
-                    ><i class="bi-github text-black mx-1" role="img" aria-label="GitHub"></i
+                <a class="" href="https://github.com/jpmoles" target="_blank" rel="noreferrer noopener"
+                    ><i class="bi-github text-black mx-1 opacity-70 hover:opacity-100" role="img" aria-label="GitHub"></i
                 ></a>
                 <a href="https://twitter.com/JimmyMoles" target="_blank" rel="noreferrer noopener"
-                    ><i class="bi bi-twitter text-twitterblue"></i></i
+                    ><i class="bi bi-twitter text-twitterblue opacity-70 hover:opacity-100"></i></i
                 ></a>
                 <a href="https://www.linkedin.com/in/james-moles-12a07a177/" target="_blank" rel="noreferrer noopener"
-                    ><i class="bi bi-linkedin text-linkedinblue"></i></i
+                    ><i class="bi bi-linkedin text-linkedinblue opacity-70 hover:opacity-100"></i></i
                 ></a>
             </div>
             <div class="max-w-xl flex flex-col lg:flex-row mb-2 justify-evenly bg-white">
@@ -113,7 +113,7 @@
                 >
             </div>
 
-            <main clas="">
+            <main class="mt-5">
                 <div class="">
                     <h2>Projects</h2>
                     <p class="text-gray-500">Beep Boop</p>
