add gitignore, adjust socials margin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </header>
             <div class="mb-7 text-2xl">
                 <a class="" href="https://github.com/jpmoles" target="_blank" rel="noreferrer noopener"
-                    ><i class="bi-github text-black mx-1 opacity-70 hover:opacity-100" role="img" aria-label="GitHub"></i
+                    ><i class="bi-github text-black opacity-70 hover:opacity-100" role="img" aria-label="GitHub"></i
                 ></a>
                 <a href="https://twitter.com/JimmyMoles" target="_blank" rel="noreferrer noopener"
                     ><i class="bi bi-twitter text-twitterblue opacity-70 hover:opacity-100"></i></i
