fixed contact page heading

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                 >
             </div>
 
-            <main class="w-full">
+            <main class="w-full mt-5">
                 <div class="w-full">
                     <h2 class="text-center font-semibold">Contact Me</h2>
                     <div class="w-full">
