changed outbound links

--- a/study.html
+++ b/study.html
@@ -118,13 +118,13 @@
                     <h2>Study</h2>
                     <ul>
                         <li>
-                            <a class="text-purple-500 hover:font-semibold" href="my-app/build/index.html"
-                                >React Tic-Tac-Toe</a
+                            <a class="text-purple-500 hover:font-semibold" href="https://github.com/jpmoles"
+                                ><strike>React Tic-Tac-Toe</strike></a
                             >
                         </li>
                         <li>
-                            <a class="text-purple-500 hover:font-semibold" href="helloworld/build/index.html"
-                                >React Components Step-by-Step</a
+                            <a class="text-purple-500 hover:font-semibold" href="https://github.com/jpmoles"
+                                ><strike>React Components Step-by-Step</strike></a
                             >
                         </li>
                     </ul>
