add canonical link for each page

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <!-- Specify canonical page between jamesmoles.com/www.jamesmoles.com -->
+        <link rel="canonical" href="https://jamesmoles.com/projects.html" />
+
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1" />
 
