add link to homepage to prevent orphan page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body class="bg-gradient-to-r from-green-50 to-green-100 overflow-x-hidden">
         <div class="w-screen lg:max-w-4xl mx-auto flex flex-col items-center bg-white my-5 lg:rounded-xl shadow-md p-8">
             <header class="flex w-full justify-center mb-2">
-                <h1 class="text-green-600 text-4xl font-semibold antialiased">James Moles</h1>
+                <a href="/"><h1 class="text-green-600 text-4xl font-semibold antialiased">James Moles</h1></a>
             </header>
             <div class="mb-7 text-2xl">
                 <a class="" href="https://github.com/jpmoles" target="_blank" rel="noreferrer noopener"
