add initial meta descriptions to each page

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
         <!-- Specify canonical page between jamesmoles.com/www.jamesmoles.com -->
         <link rel="canonical" href="https://jamesmoles.com/contact.html" />
 
+        <!-- Provide meta description for the page -->
+        <meta name="description" content="Feel free to contact me through this form. For business inquiries, please state the nature of the email. Improvement suggestions for this site are welcome!">
+
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1" />
 
