--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
         <!-- Specify canonical page between jamesmoles.com/www.jamesmoles.com -->
         <link rel="canonical" href="https://jamesmoles.com/about.html" />
 
+        <!-- Provide meta description for the page -->
+        <meta name="description" content="A short description about topics I covered in college. I have included a list of the major books I used in my computer science related classes.">
+
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1" />
 
