--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <!-- Specify canonical page between jamesmoles.com/www.jamesmoles.com -->
         <link rel="canonical" href="https://jamesmoles.com/index.html" />
 
+        <!-- Provide meta description for the page -->
+        <meta name="description" content="The homepage for my personal website. Check out the resources I learn with, and my social links!">
+
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1" />
 
