--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,10 @@
         <!-- Specify canonical page between jamesmoles.com/www.jamesmoles.com -->
         <link rel="canonical" href="https://jamesmoles.com/projects.html" />
 
+        <!-- Provide meta description for the page -->
+        <meta name="description" content="Beep boop. A list of projects I have completed for academia, work, and my personal interests.">
+
+
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1" />
 
