--- a/study.html
+++ b/study.html
@@ -10,6 +10,9 @@
         <!-- Specify canonical page between jamesmoles.com/www.jamesmoles.com -->
         <link rel="canonical" href="https://jamesmoles.com/study.html" />
 
+        <!-- Provide meta description for the page -->
+        <meta name="description" content="These interests, which are in no particular order, enumerate computer science topics I have a strong interest in learning more about.">
+
         <!-- Works for Chrome, Firefox, and IE -->
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.1" />
 
