increased word count for pages with less than 50

--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,10 @@
             <main class="w-full mt-5">
                 <div class="w-full">
                     <h2 class="text-center font-semibold">Contact Me</h2>
+                    <div class="mt-5 text-center text-gray-500">
+                        <p>Hi, thank you for your interest in contacting me. Regardless of the inquiry I would appreciate if you could please include your name and whether you would like a response. Any and all interest is welcome!</p>
+                        <p class="mt-4">For business inquiries please specify the nature of the request. Site suggestions are always appreciated!</p>
+                    </div>
                     <div class="w-full">
                         <form
                             action="https://formspree.io/f/xrgrrknn"
