--- a/projects.html
+++ b/projects.html
@@ -122,8 +122,15 @@
 
             <main class="mt-5">
                 <div class="">
-                    <h2>Projects</h2>
+                    <div class="text-center">
+                        <h2>Projects</h2>
+                    </div>
+                    
                     <p class="text-gray-500">Beep Boop</p>
+                    <p class="mt-5 text-gray-500">To check out my projects take a look at my github profile and repos!</p>
+                    <p class="mt-5 text-gray-500">
+                        I'm currently working on making a game using the blockchain. I'm working on making it for the polygon network as the fees are much lower than other popular blockchains. I will release more info at a later date.
+                    </p>
                 </div>
             </main>
         </div>
