--- a/study.html
+++ b/study.html
@@ -120,8 +120,9 @@
             </div>
 
             <main>
-                <div class="mt-5">
-                    <h2>Study</h2>
+                <div class="flex flex-col items-center min-h-full mt-5">
+                    <div class="w-60">
+                        <h2>Study</h2>
                     <ul>
                         <li>
                             <a class="text-purple-500 hover:font-semibold" href="https://github.com/jpmoles"
@@ -134,7 +135,8 @@
                             >
                         </li>
                     </ul>
-                    <div class="mt-5">
+                    </div>
+                    <div class="w-60 mt-5">
                         <h2>Current Interests:</h2>
                         <p class="text-gray-700">These are in no particular order.</p>
                         <ul class="text-gray-500">
@@ -144,6 +146,9 @@
                             <li>Game Engine Technologies</li>
                             <li>Data Analytics</li>
                         </ul>
+                    </div>
+                    <div class="max-w-md mt-5">
+                        <p class="text-gray-500">&emsp;&emsp;&emsp;The internet is a much larger place than when I first began learning about programming and computer science. The online resources available are extensive and thorough, however, I find reading a book to still be a great way to learn deeply about a subject.</p>
                     </div>
                 </div>
             </main>
