--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
                 <div class="text-center">
                     <h2>Home</h2>
                     <p class="text-gray-500">
-                        Hi, I will be updating this website with my personal projects and ideas. Feel free to email me.
+                        Hi, I have been interested in technology since I was little. I strive to learn more about how technology is changing the world and solving problems every day. Feel free to email me.
                     </p>
                 </div>
-                <div class="flex flex-col lg:flex-row my-10">
+                <div class="text-center mt-5 text-xl">Projects</div>
+                <div class="flex flex-col lg:flex-row mb-7">
                     <div class="flex-1 mt-4 md:mr-4">
                         <div class="text-xl">Command Line Shell</div>
                         <div class="text-gray-500">
