improved description of projects

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="flex-1 mt-4">
                         <div class="text-xl">Company Hiring Interface</div>
                         <div class="text-gray-500">
-                            A front-end and backend setup example for storing employee information.
+                            A front-end and backend prototype for storing employee information. Built using an Oracle DB with connectivity using JDBC.
                         </div>
                     </div>
                 </div>
