improve the readability of the paragraph describing books i have read

--- a/about.html
+++ b/about.html
@@ -124,12 +124,7 @@
                     <div class="">
                         <h2 class="text-center">About</h2>
                         <p class="text-gray-500">
-                            &emsp;&emsp;&emsp;Hello, I graduated from George Mason University with a Bachelor of Science
-                            in Computer Science. During my time in school, I read several books about programming,
-                            networking, computer science theory, computer systems, databases, and operating systems.
-                            This is not a comprehensive list of all the books I read or referenced, but more so listing
-                            the books I took the time to dig into. They are listed below as a reference for myself and
-                            others interested in learning more about how computers work.
+                            &emsp;&emsp;&emsp;Hello, I graduated from George Mason University with a Bachelor of Science in Computer Science. During my time in school, I read several books about programming, networking, computer science theory, computer systems, databases, and operating systems. This is not a comprehensive list of the books I read or referenced, but more so a listing of the books I took the time to dig into. I have listed them below as a reference for myself, and others interested in learning more about how computers work.
                         </p>
                     </div>
 
