--- a/study.html
+++ b/study.html
@@ -121,7 +121,7 @@
 
             <main>
                 <div class="flex flex-col items-center min-h-full mt-5">
-                    <div class="w-60">
+                    <!-- <div class="w-60">
                         <h2>Study</h2>
                     <ul>
                         <li>
@@ -135,7 +135,7 @@
                             >
                         </li>
                     </ul>
-                    </div>
+                    </div> -->
                     <div class="w-60 mt-5">
                         <h2>Current Interests:</h2>
                         <p class="text-gray-700">These are in no particular order.</p>
